--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "declaration": true
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.test.ts"]
 }
