--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,9 +11,8 @@ env:
   branchName: ${GITHUB_REF##*/}
 
 on:
-  pull_request:
+  push:
     branches: ['main']
-  workflow_call:
 
 jobs:
   build:
