--- a/package.json
+++ b/package.json
@@ -24,5 +24,6 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
-  }
+  },
+  "keywords": ["te reo", "maori", "translation", "numerals", "tatau", "aotearoa", "nz", "new zealand"]
 }
