--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,6 +40,9 @@ jobs:
       - name: CI
         run: npm ci
 
+      - name: Lint
+        run: npm run lint
+
       - name: Test
         run: npm run test
 
