Remove Node 16 from test matrix

--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x]
+        node-version: [18.x, 20.x]
 
     steps:
       - name: Checkout
@@ -41,4 +41,3 @@ jobs:
 
       - name: Test Mutants
         run: npm run test-mutants
-        
