--- a/.github/workflows/publish-and-release.yml
+++ b/.github/workflows/publish-and-release.yml
@@ -1,10 +1,7 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: build-workflow
+name: publish-and-release-workflow
 
 permissions:
-  contents: read
+  contents: write
   actions: read
 
 env:
@@ -19,7 +16,8 @@ jobs:
     uses: ./.github/workflows/lint-and-test.yml
 
   build:
-    name: Build and Publish
+    name: Publish and Release
+    needs: test
     runs-on: ubuntu-latest
 
     strategy:
@@ -31,7 +29,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          # We need to fetch all branches and commits so that Nx affected has a base to compare against.
           fetch-depth: 0
 
       - name: Use Node.js ${{ matrix.node-version }}
