Add check version workflow

--- a/.github/workflows/publish-and-release.yml
+++ b/.github/workflows/publish-and-release.yml
@@ -12,12 +12,12 @@ on:
     branches: ['main']
 
 jobs:
-  test:
-    uses: ./.github/workflows/lint-and-test.yml
+  check-version:
+    uses: ./.github/workflows/check-version.yml
 
   build:
     name: Publish and Release
-    needs: test
+    needs: check-version
     runs-on: ubuntu-latest
 
     strategy:
