Allow version check to fail

--- a/.github/workflows/check-version.yml
+++ b/.github/workflows/check-version.yml
@@ -21,6 +21,7 @@ jobs:
     name: Check Version
     needs: test
     runs-on: ubuntu-latest
+    continue-on-error: true
 
     steps:
       - name: Checkout
